@@ -15,7 +15,6 @@ import eu.maveniverse.maven.toolbox.shared.ResolutionRoot;
 import eu.maveniverse.maven.toolbox.shared.ResolutionScope;
 import eu.maveniverse.maven.toolbox.shared.Result;
 import eu.maveniverse.maven.toolbox.shared.ToolboxCommando;
-import java.util.stream.Collectors;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 
@@ -31,15 +30,15 @@ public class PluginLibYearMojo extends MPPluginMojoSupport {
     private String artifactMatcherSpec;
 
     /**
-     * Artifact version matcher spec string to filter version candidates, default is 'noSnapshotsAndPreviews()'.
+     * Artifact version matcher spec string to filter version candidates, default is 'any()'.
      */
-    @Parameter(property = "artifactVersionMatcherSpec", defaultValue = "noSnapshotsAndPreviews()")
+    @Parameter(property = "artifactVersionMatcherSpec", defaultValue = "any()")
     private String artifactVersionMatcherSpec;
 
     /**
-     * Artifact version selector spec string to select "latest", default is 'major()'.
+     * Artifact version selector spec string to select "latest", default is 'contextualSnapshotsAndPreviews()'.
      */
-    @Parameter(property = "artifactVersionSelectorSpec", defaultValue = "major()")
+    @Parameter(property = "artifactVersionSelectorSpec", defaultValue = "contextualSnapshotsAndPreviews()")
     private String artifactVersionSelectorSpec;
 
     /**
@@ -64,7 +63,7 @@ public class PluginLibYearMojo extends MPPluginMojoSupport {
                 toolboxCommando.parseArtifactVersionSelectorSpec(artifactVersionSelectorSpec);
         for (ResolutionRoot root : allProjectManagedPluginsAsResolutionRoots(toolboxCommando).stream()
                 .filter(r -> artifactMatcher.test(r.getArtifact()))
-                .collect(Collectors.toList())) {
+                .toList()) {
             toolboxCommando.libYear(
                     "managed plugin " + root.getArtifact(),
                     ResolutionScope.RUNTIME,
@@ -77,7 +76,7 @@ public class PluginLibYearMojo extends MPPluginMojoSupport {
         }
         for (ResolutionRoot root : allProjectPluginsAsResolutionRoots(toolboxCommando).stream()
                 .filter(r -> artifactMatcher.test(r.getArtifact()))
-                .collect(Collectors.toList())) {
+                .toList()) {
             toolboxCommando.libYear(
                     "plugin " + root.getArtifact(),
                     ResolutionScope.RUNTIME,
